# ros2-medical-physical-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: memory.instruction.md
.github/prompts/: create-day-design-docs.prompt.md  implement-dayx.prompt.md
.github/workflows/: ci.yml
docs/: PLAN.md  day10_fault_injection.md  day11_logging_tracing.md  day12_rosbag_reproducibility.md  day13_real_sensor_i2c_spi.md  day14_jetson.md  day15_eeg_bci_input.md  day16_anomaly_detection_ai.md  day17_multi_node_coordination.md  day18_realtime_closed_loop.md  day19_rosbag_replay_closed_loop.md  day3_shutdown_clean_exit.md  day5_alert_rules.md  day6_flatline.md  day6_flatline_detection.md  day7_rule_config.md  day7_rule_externalization.md  day8_qos.md  day9_lifecycle.md  development_environment.md
scripts/: ci_day19_replay_control_smoke.sh  ci_launch_topic_smoke.sh  ci_rosbag_replay_smoke.sh  repro_day4_record.sh  repro_day6_flatline.sh  smoke_shutdown.sh
specs/day10_fault_injection/: acceptance.md  spec.md  tasks.md
specs/day11_logging_tracing/: acceptance.md  spec.md  tasks.md
specs/day12_rosbag_reproducibility/: acceptance.md  spec.md  tasks.md
specs/day13_real_sensor_i2c_spi/: acceptance.md  spec.md  tasks.md
specs/day14_jetson/: acceptance.md  spec.md  tasks.md
specs/day15_eeg_bci_input/: acceptance.md  spec.md  (+1 more)
src/medical_interfaces/: CMakeLists.txt  package.xml
src/medical_interfaces/msg/: Alert.msg  BCIFeatures.msg  VitalSigns.msg
(+84 files in other folders)
